<resources>
    <string name="app_name">TaskN5</string>
    <string name="pawel_czerwinski">Pawel Czerwinski</string>
    <string name="pawel_czerwinski_second">\@pawel_czerwinski</string>
    <string name="photo">photo</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="next">Next</string>
    <string name="username">username</string>
    <string name="sign_up">Sign Up</string>
    <string name="accept_terms">By signing up, you agree to Photo’s <u>Terms of Service</u> and <u>Privacy Policy</u>.</string>
    <string name="user">User:</string>
    <string name="username_text">Username:</string>
    <string name="email_text">Email:</string>
    <string name="sign_out">Sign Out</string>
</resources>
