<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_from_register"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_arrow"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="48sp"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/comfortaa_medium"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/register_layout_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_email_et"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/costume_et"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:padding="15dp"
            android:layout_marginTop="32dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/costume_et"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_next_btn"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:background="@drawable/costume_black_btn"
            android:layout_marginTop="16dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/register_layout_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_username_et"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/costume_et"
            android:hint="@string/username"
            android:padding="15dp"
            android:layout_marginTop="32dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:background="@drawable/costume_black_btn"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:textColor="@color/black"
            android:text="@string/accept_terms"
            android:textSize="14sp"
            android:layout_marginTop="32dp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>