<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_from_profile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_arrow"
        tools:ignore="SpeakableTextPresentCheck" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="48sp"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/comfortaa_medium"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="15dp"/>
        <TextView
            android:id="@+id/user_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="15dp"/>
        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/costume_black_btn"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>