<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@drawable/rectangle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/photo"
            android:textSize="40sp"
            android:fontFamily="@font/comfortaa_bold"
            android:textColor="@color/black"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/logo" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/user_image"
                android:layout_marginEnd="10dp"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pawel_czerwinski"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="15sp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pawel_czerwinski_second"
                    android:textSize="13sp"
                    android:layout_weight="1"/>
            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingHorizontal="25dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_to_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/log_in"
            android:layout_weight="1"
            android:background="@drawable/costume_login_btn"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_to_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/costume_black_btn"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>

